--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,48 +20,54 @@
     <string name="low">Низкий</string>
     <string name="none">Нет</string>
     <string name="description">Описание</string>
-    <string name="every">Кажд.</string>
-    <string name="day">День</string>
-    <string name="week">Неделя</string>
-    <string name="month">Месяц</string>
-    <string name="year">Год</string>
-    <string name="day_1">1 Число</string>
-    <string name="day_2">2 Число</string>
-    <string name="day_3">3 Число</string>
-    <string name="day_4">4 Число</string>
-    <string name="day_5">5 Число</string>
-    <string name="day_6">6 Число</string>
-    <string name="day_7">7 Число</string>
-    <string name="day_8">8 Число</string>
-    <string name="day_9">9 Число</string>
-    <string name="day_10">10 Число</string>
-    <string name="day_11">11 Число</string>
-    <string name="day_12">12 Число</string>
-    <string name="day_13">13 Число</string>
-    <string name="day_14">14 Число</string>
-    <string name="day_15">15 Число</string>
-    <string name="day_16">16 Число</string>
-    <string name="day_17">17 Число</string>
-    <string name="day_18">18 Число</string>
-    <string name="day_19">19 Число</string>
-    <string name="day_20">20 Число</string>
-    <string name="day_21">21 Число</string>
-    <string name="day_22">22 Число</string>
-    <string name="day_23">23 Число</string>
-    <string name="day_24">24 Число</string>
-    <string name="day_25">25 Число</string>
-    <string name="day_26">26 Число</string>
-    <string name="day_27">27 Число</string>
-    <string name="day_28">28 Число</string>
-    <string name="day_29">29 Число</string>
-    <string name="day_30">30 Число</string>
-    <string name="day_31">31 Число</string>
+    <string name="every">кажд.</string>
+    <string name="day">день</string>
+    <string name="week">неделя</string>
+    <string name="month">месяц</string>
+    <string name="year">год</string>
+    <string name="day_1">1 число</string>
+    <string name="day_2">2 число</string>
+    <string name="day_3">3 число</string>
+    <string name="day_4">4 число</string>
+    <string name="day_5">5 число</string>
+    <string name="day_6">6 число</string>
+    <string name="day_7">7 число</string>
+    <string name="day_8">8 число</string>
+    <string name="day_9">9 число</string>
+    <string name="day_10">10 число</string>
+    <string name="day_11">11 число</string>
+    <string name="day_12">12 число</string>
+    <string name="day_13">13 число</string>
+    <string name="day_14">14 число</string>
+    <string name="day_15">15 число</string>
+    <string name="day_16">16 число</string>
+    <string name="day_17">17 число</string>
+    <string name="day_18">18 число</string>
+    <string name="day_19">19 число</string>
+    <string name="day_20">20 число</string>
+    <string name="day_21">21 число</string>
+    <string name="day_22">22 число</string>
+    <string name="day_23">23 число</string>
+    <string name="day_24">24 число</string>
+    <string name="day_25">25 число</string>
+    <string name="day_26">26 число</string>
+    <string name="day_27">27 число</string>
+    <string name="day_28">28 число</string>
+    <string name="day_29">29 число</string>
+    <string name="day_30">30 число</string>
+    <string name="day_31">31 число</string>
     <string name="last_day">Последний день</string>
-    <string name="first">Перв.</string>
-    <string name="second">Втор.</string>
-    <string name="third">Трет.</string>
-    <string name="fourth">Четверт.</string>
-    <string name="last">Последн.</string>
+    <string name="first">перв.</string>
+    <string name="second">втор.</string>
+    <string name="third">трет.</string>
+    <string name="fourth">четверт.</string>
+    <string name="last">последн.</string>
+    <string name="daily">ежедневно</string>
+    <string name="weekly">еженедельно</string>
+    <string name="monthly">ежемесячно</string>
+    <string name="weeks">недели</string>
+    <string name="days">дней</string>
+    <string name="yearly">ежегодно</string>
 
     <!--first day is sunday, last day is saturday-->
     <string-array name="calendar_days_1_letter">
@@ -76,13 +82,13 @@
 
     <!--first day is sunday, last day is saturday-->
     <string-array name="calendar_days_2_letters">
-        <item>Вс</item>  <!--sunday-->
-        <item>Пн</item>  <!--monday-->
-        <item>Вт</item>  <!--tuesday-->
-        <item>Ср</item>  <!--wednesday-->
-        <item>Чт</item>  <!--thursday-->
-        <item>Пт</item>  <!--friday-->
-        <item>Сб</item>  <!--saturday-->
+        <item>вс</item>  <!--sunday-->
+        <item>пн</item>  <!--monday-->
+        <item>вт</item>  <!--tuesday-->
+        <item>ср</item>  <!--wednesday-->
+        <item>чт</item>  <!--thursday-->
+        <item>пт</item>  <!--friday-->
+        <item>сб</item>  <!--saturday-->
     </string-array>
 
     <string-array name="months">
