--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,8 @@
     <string name="select_time">Выбрать время</string>
     <string name="dialog_negative_button_text">Закрыть</string>
     <string name="dialog_positive_button_text">Готово</string>
+    <string name="repeat">Повторять</string>
+    <string name="set_time">Выбрать время</string>
 
     <!--first day is sunday, last day is saturday-->
     <string-array name="calendar_days_1_letter">
