--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,9 +55,13 @@
     <string name="completed">Выполненные (%1$d)</string>
     <string name="welcome_messages">Hello, %1$s! You have %2$d new messages.</string>
     <string name="there_is_no_tasks">Пока нет задач</string>
+    <string name="there_is_no_completed_tasks">Нет выполненных задач для удаления</string>
     <string name="create_new_task">Создайте новую задачу, нажав на +</string>
     <string name="on_the_xx_rd">%1$d числа</string>
     <string name="on_the_last_day">в последний день</string>
+    <string name="are_you_sure_you_want_to_delete_the_list">Вы уверены, что хотите удалить список?</string>
+    <string name="delete">Удалить</string>
+    <string name="all_tasks_in_the_list_will_be_permanently_deleted">Все задачи в списке будут безвозвратно удалены</string>
 
     <!--first day is sunday, last day is saturday-->
     <string-array name="calendar_days_1_letter">
